spade-tests/src/snapshots/spade_tests__typeinference__concat_requires_number.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {}

fn test(a: A) -> int<8> {
    a `concat` a
}


error: Argument type mismatch. Expected Number<_> got A
   ┌─ testinput:4:5
   │
 3 │ fn test(a: A) -> int<8> {
   │            - Type A inferred here
 4 │     a `concat` a
   │     ^ expected Number<_>
   │
   ┌─ <compiler dir>/stdlib/conv.spade:17:11
   │
17 │ fn concat<N, M, K>(x: N, y: M) -> K __builtin__
   │           - Type Number<_> inferred here
   │
   = note: Expected: Number<_>
                Got: A
